--- a/RPG-MVC/Views/Jogador/Index.cshtml
+++ b/RPG-MVC/Views/Jogador/Index.cshtml
@@ -10,18 +10,25 @@
     </button>
 
     <button type="button" class="btn btn-primary">
-        <a class="nav-link text-dark" asp-area="" asp-controller="Jogador" asp-action="CadastrarJogador">CadastrarJogador</a>
+        <a class="nav-link text-dark" asp-area="" asp-controller="Jogador" asp-action="CadastrarJogador">Cadastrar Jogador</a>
+    </button>
+
+    <button type="button" class="btn btn-primary">
+        <a class="nav-link text-dark" asp-area="" asp-controller="Jogador" asp-action="ModificarJogador">Modificar Jogador</a>
+    </button>
+    <button type="button" class="btn btn-primary">
+        <a class="nav-link text-dark" asp-area="" asp-controller="Jogador" asp-action="RemoverJogador">Remover Jogador</a>
     </button>
 
     <button type="button" class="btn btn-primary disabled">
-        <a class="nav-link text-dark" asp-area="" asp-controller="Jogador" asp-action="PersistirJogador">PersistirJogador</a>
+        <a class="nav-link text-dark" asp-area="" asp-controller="Jogador" asp-action="PersistirJogador">Persistir Jogador</a>
     </button>
 
     <button type="button" class="btn btn-primary">
-        <a class="nav-link text-dark" asp-area="" asp-controller="Jogador" asp-action="VerJogador">VerJogador</a>
+        <a class="nav-link text-dark" asp-area="" asp-controller="Jogador" asp-action="BuscarJogador">Buscar Jogador</a>
     </button>
 
     <button type="button" class="btn btn-primary">
-        <a class="nav-link text-dark" asp-area="" asp-controller="Jogador" asp-action="VerTodosJogadores">VerTodosJogadores</a>
+        <a class="nav-link text-dark" asp-area="" asp-controller="Jogador" asp-action="VerTodosJogadores">Ver Todos Jogadores</a>
     </button>
 </div>
