--- a/RPG-MVC/Views/Jogador/RemovendoJogador.cshtml
+++ b/RPG-MVC/Views/Jogador/RemovendoJogador.cshtml
@@ -1,10 +1,11 @@
-﻿@*
+﻿@model RPG_MVC.Models.Jogador
+@*
     For more information on enabling MVC for empty projects, visit https://go.microsoft.com/fwlink/?LinkID=397860
 *@
 @{
 }
 
-
+<h2>Jogador Removido</h2>
 <table class="table table-striped table-bordered">
     <thead class="thead-dark">
         <tr>
