--- a/RPG-MVC/Views/Jogador/Index.cshtml
+++ b/RPG-MVC/Views/Jogador/Index.cshtml
@@ -25,10 +25,10 @@
     </button>
 
     <button type="button" class="btn btn-primary">
-        <a class="nav-link text-dark" asp-area="" asp-controller="Jogador" asp-action="BuscarJogador">Buscar Jogador</a>
+        <a class="nav-link text-dark" asp-area="" asp-controller="Jogador" asp-action="VisualizarJogador">Visualizar Jogador</a>
     </button>
 
     <button type="button" class="btn btn-primary">
-        <a class="nav-link text-dark" asp-area="" asp-controller="Jogador" asp-action="VerTodosJogadores">Ver Todos Jogadores</a>
+        <a class="nav-link text-dark" asp-area="" asp-controller="Jogador" asp-action="VisualizarTodosJogadores">Visualizar Todos Jogadores</a>
     </button>
 </div>
