--- a/RPG-MVC/Views/Arma/Index.cshtml
+++ b/RPG-MVC/Views/Arma/Index.cshtml
@@ -3,3 +3,15 @@
 *@
 @{
 }
+<div class="text-center">
+    <h1 class="display-4">Menu Arma</h1>  <br /> <hr />
+</div>
+<div>
+    <button type="button" class="btn btn-primary">
+        <a class="nav-link text-dark" asp-area="" asp-controller="Arma" asp-action="AdicionarArma">Adicionar Arma</a>
+    </button>
+
+    <button type="button" class="btn btn-primary">
+        <a class="nav-link text-dark" asp-area="" asp-controller="Arma" asp-action="VisualizarTodasArmas">Visualizar Todas Armas</a>
+    </button>
+</div>
