--- a/RPG-MVC/Views/Jogador/Index.cshtml
+++ b/RPG-MVC/Views/Jogador/Index.cshtml
@@ -3,7 +3,9 @@
 *@
 @{
 }
-
+<div class="text-center">
+    <h1 class="display-4">Menu Jogador</h1>  <br /> <hr />
+</div>
 <div>
     <button type="button" class="btn btn-primary">
         <a class="nav-link text-dark" asp-area="" asp-controller="Jogador" asp-action="Index">Inicial</a>
