--- a/RPG-MVC/Views/Shared/_Layout.cshtml
+++ b/RPG-MVC/Views/Shared/_Layout.cshtml
@@ -28,6 +28,9 @@
                         <li class="nav-item">
                             <a class="nav-link text-dark" asp-area="" asp-controller="Jogador" asp-action="Index">Jogador</a>
                         </li>
+                        <li class="nav-item">
+                            <a class="nav-link text-dark" asp-area="" asp-controller="Arma" asp-action="Index">Arma</a>
+                        </li>
                     </ul>
                 </div>
             </div>
