--- a/RPG-MVC/Views/Home/Index.cshtml
+++ b/RPG-MVC/Views/Home/Index.cshtml
@@ -49,5 +49,8 @@
     <button type="button" class="btn btn-primary">
         <a class="nav-link text-dark" asp-area="" asp-controller="Arma" asp-action="VisualizarTodasArmas">Visualizar Todas Armas</a>
     </button>
+    <button type="button" class="btn btn-primary">
+        <a class="nav-link text-dark" asp-area="" asp-controller="Arma" asp-action="VisualizarArma">Visualizar Arma</a>
+    </button>
 </div>
 <hr />
