--- a/RPG-MVC/Views/Home/Index.cshtml
+++ b/RPG-MVC/Views/Home/Index.cshtml
@@ -47,10 +47,16 @@
         <a class="nav-link text-dark" asp-area="" asp-controller="Arma" asp-action="AdicionarArma">Adicionar Arma</a>
     </button>
     <button type="button" class="btn btn-primary">
-        <a class="nav-link text-dark" asp-area="" asp-controller="Arma" asp-action="VisualizarTodasArmas">Visualizar Todas Armas</a>
+        <a class="nav-link text-dark" asp-area="" asp-controller="Arma" asp-action="ModificarArma">Modificar Arma</a>
+    </button>
+    <button type="button" class="btn btn-primary">
+        <a class="nav-link text-dark" asp-area="" asp-controller="Arma" asp-action="RemoverArma">Remover Arma</a>
     </button>
     <button type="button" class="btn btn-primary">
         <a class="nav-link text-dark" asp-area="" asp-controller="Arma" asp-action="VisualizarArma">Visualizar Arma</a>
+    </button>
+    <button type="button" class="btn btn-primary">
+        <a class="nav-link text-dark" asp-area="" asp-controller="Arma" asp-action="VisualizarTodasArmas">Visualizar Todas Armas</a>
     </button>
 </div>
 <hr />
