--- a/RPG-MVC/Views/Arma/Index.cshtml
+++ b/RPG-MVC/Views/Arma/Index.cshtml
@@ -8,9 +8,20 @@
 </div>
 <div>
     <button type="button" class="btn btn-primary">
+        <a class="nav-link text-dark" asp-area="" asp-controller="Arma" asp-action="Index">Inicial Arma</a>
+    </button>
+    <button type="button" class="btn btn-primary">
         <a class="nav-link text-dark" asp-area="" asp-controller="Arma" asp-action="AdicionarArma">Adicionar Arma</a>
     </button>
-
+    <button type="button" class="btn btn-primary">
+        <a class="nav-link text-dark" asp-area="" asp-controller="Arma" asp-action="ModificarArma">Modificar Arma</a>
+    </button>
+    <button type="button" class="btn btn-primary">
+        <a class="nav-link text-dark" asp-area="" asp-controller="Arma" asp-action="RemoverArma">Remover Arma</a>
+    </button>
+    <button type="button" class="btn btn-primary">
+        <a class="nav-link text-dark" asp-area="" asp-controller="Arma" asp-action="VisualizarArma">Visualizar Arma</a>
+    </button>
     <button type="button" class="btn btn-primary">
         <a class="nav-link text-dark" asp-area="" asp-controller="Arma" asp-action="VisualizarTodasArmas">Visualizar Todas Armas</a>
     </button>
