--- a/RPG-MVC/Views/Arma/RemoverArma.cshtml
+++ b/RPG-MVC/Views/Arma/RemoverArma.cshtml
@@ -1,4 +1,4 @@
-﻿@model RPG_MVC.Models.Jogador
+﻿@model RPG_MVC.Models.Arma
 
 @*
     For more information on enabling MVC for empty projects, visit https://go.microsoft.com/fwlink/?LinkID=397860
@@ -6,16 +6,16 @@
 @{
 }
 
-<h4>Buscar Jogador</h4>
+<h4>Remover Arma</h4>
 <hr />
 <div class="row">
     <div class="col-md-4">
-        <form asp-action="ModificandoJogador">
+        <form asp-action="RemovendoArma">
             <div asp-validation-summary="ModelOnly" class="text-danger"></div>
             <div class="form-group">
-                <label asp-for="JogadorId" class="control-label"></label>
-                <input asp-for="JogadorId" class="form-control" />
-                <span asp-validation-for="JogadorId" class="text-danger"></span>
+                <label asp-for="ArmaId" class="control-label"></label>
+                <input asp-for="ArmaId" class="form-control" />
+                <span asp-validation-for="ArmaId" class="text-danger"></span>
             </div>
             <div class="form-group">
                 <input type="submit" value="Confirmar" class="btn btn-primary" />
