--- a/RPG-MVC/Views/Home/Index.cshtml
+++ b/RPG-MVC/Views/Home/Index.cshtml
@@ -59,4 +59,14 @@
         <a class="nav-link text-dark" asp-area="" asp-controller="Arma" asp-action="VisualizarTodasArmas">Visualizar Todas Armas</a>
     </button>
 </div>
+
+<div> <h3>Menu Inimigo</h3></div>
+<div>
+    <button type="button" class="btn btn-primary">
+        <a class="nav-link text-dark" asp-area="" asp-controller="Inimigo" asp-action="Index">Inicial Inimigo</a>
+    </button>
+    <button type="button" class="btn btn-primary">
+        <a class="nav-link text-dark" asp-area="" asp-controller="Inimigo" asp-action="AdicionarInimigo">Adicionar Inimigo</a>
+    </button>
+</div>
 <hr />
