CRUD do inimigocontroller finalizado

--- a/RPG-MVC/Views/Home/Index.cshtml
+++ b/RPG-MVC/Views/Home/Index.cshtml
@@ -59,6 +59,7 @@
         <a class="nav-link text-dark" asp-area="" asp-controller="Arma" asp-action="VisualizarTodasArmas">Visualizar Todas Armas</a>
     </button>
 </div>
+<hr />
 
 <div> <h3>Menu Inimigo</h3></div>
 <div>
@@ -67,6 +68,18 @@
     </button>
     <button type="button" class="btn btn-primary">
         <a class="nav-link text-dark" asp-area="" asp-controller="Inimigo" asp-action="AdicionarInimigo">Adicionar Inimigo</a>
+    </button>
+    <button type="button" class="btn btn-primary">
+        <a class="nav-link text-dark" asp-area="" asp-controller="Inimigo" asp-action="ModificarInimigo">Modificar Inimigo</a>
+    </button>
+    <button type="button" class="btn btn-primary">
+        <a class="nav-link text-dark" asp-area="" asp-controller="Inimigo" asp-action="RemoverInimigo">Remover Inimigo</a>
+    </button>
+    <button type="button" class="btn btn-primary">
+        <a class="nav-link text-dark" asp-area="" asp-controller="Inimigo" asp-action="VisualizarInimigo">Visualizar Inimigo</a>
+    </button>
+    <button type="button" class="btn btn-primary">
+        <a class="nav-link text-dark" asp-area="" asp-controller="Inimigo" asp-action="VisualizarTodosInimigos">Visualizar Todos Inimigo</a>
     </button>
 </div>
 <hr />
