--- a/RPG-MVC/Views/Jogador/VisualizarTodosJogadores.cshtml
+++ b/RPG-MVC/Views/Jogador/VisualizarTodosJogadores.cshtml
@@ -13,6 +13,7 @@
             <th>Defesa</th>
             <th>Experiencia</th>
             <th>Moedas</th>
+            <th>ArmaId</th>
         </tr>
     </thead>
     <tbody>
@@ -27,6 +28,7 @@
                 <td>@objeto.Defesa</td>
                 <td>@objeto.Experiencia</td>
                 <td>@objeto.Moedas</td>
+                <td>@objeto.ArmaId</td>
             </tr>
         }
     </tbody>
