--- a/RPG-MVC/Views/Home/Index.cshtml
+++ b/RPG-MVC/Views/Home/Index.cshtml
@@ -35,6 +35,9 @@
     <button type="button" class="btn btn-primary">
         <a class="nav-link text-dark" asp-area="" asp-controller="Jogador" asp-action="VisualizarTodosJogadores">Todos Jogadores</a>
     </button>
+    <button type="button" class="btn btn-success">
+        <a class="nav-link text-dark" asp-area="" asp-controller="Jogador" asp-action="EquiparArmaJogador">Equipar Arma</a>
+    </button>
 </div>
 <hr />
 
