--- a/RPG-MVC/Views/Jogador/EquiparArmaJogador.cshtml
+++ b/RPG-MVC/Views/Jogador/EquiparArmaJogador.cshtml
@@ -9,7 +9,13 @@
 <div class="row">
     <div class="col-md-4">
         <form asp-action="EquipandoArmaJogador">
+            <br />
+            Inserir ID do jogador
+            <br />
             <input type="number" name="jogadorId" />
+            <br />
+            Inserir ID da arma
+            <br />
             <input type="number" name="armaId" />
             <div class="form-group">
                 <input type="submit" value="Equipar Arma" class="btn btn-primary" />
